--- a/style.css
+++ b/style.css
@@ -1,30 +1,86 @@
+/* Estilo general para el body */
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Raleway", serif;
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: rgb(254, 243, 226);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100vh;
+  overflow: auto;
 }
+
+/* Contenedor principal */
 .container {
   text-align: center;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 8px;
-  max-width: 100%;
-  width: 90%;
-}
-.game-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  padding: 40px;
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
-  background-color: white;
+}
+
+/* Descripción */
+.description p {
+  font-size: 18px;
+  color: #333;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+/* Contenedor de las instrucciones */
+.instructions-container {
+  background-color: rgb(228, 241, 172);
+  padding: 20px;
+  width: 100%;
+  max-width: 1200px;
+  border-radius: 8px;
+  margin: 20px 0;
+}
+
+/* Título de las instrucciones */
+.instructions-container h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  margin-left: 40px;
+  text-align: left;
+  color: rgb(17, 139, 80);
+}
+
+/* Lista numerada de instrucciones */
+.instructions-container ol {
+  text-align: left;
+  font-size: 18px;
+  color: #333;
+  margin-left: 20px;
+  line-height: 1.8;
+}
+
+/* Estilo para el título */
+h1 {
+  color: rgb(247, 44, 91);
+  font-size: 62px;
+  margin-bottom: 30px;
+}
+
+/* Estilo para las imágenes del personaje */
+.image-container img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 8px;
+}
+
+/* Estilo para los contenedores del juego */
+
+.game-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1200px;
+  max-height: fit-content;
+  margin: 20px auto;
+  background-color: rgb(239, 182, 200);
   border: 1px solid #ccc;
   border-radius: 8px;
   padding: 20px;
@@ -34,30 +90,26 @@ body {
 .canvas-container {
   flex: 1;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
 }
 
 #sketch-container {
   position: relative;
 }
 
-.instructions-container {
-  flex: 1;
-  padding: 20px;
-  text-align: left;
-  font-size: 18px;
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.instructions-container h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-h1 {
-  color: #7e1717;
-}
-p {
-  color: #1b2fcc;
-  line-height: 1.6;
+canvas {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
 }
