--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
   height: 100vh;
   overflow: auto;
 }
-
 /* Contenedor principal */
 .container {
   text-align: center;
@@ -20,7 +19,6 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
-
 /* Descripción */
 .description p {
   font-size: 18px;
@@ -64,13 +62,6 @@ h1 {
   margin-bottom: 30px;
 }
 
-/* Estilo para las imágenes del personaje */
-.image-container img {
-  width: 100%;
-  max-width: 300px;
-  border-radius: 8px;
-}
-
 /* Estilo para los contenedores del juego */
 
 .game-container {
@@ -90,26 +81,30 @@ h1 {
 .canvas-container {
   flex: 1;
   display: flex;
-  justify-content: left;
-  align-items: left;
+  justify-content: center;
+  align-items: center;
 }
 
 #sketch-container {
   position: relative;
 }
 
-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.instructions-container {
+  flex: 1;
+  padding: 20px;
+  text-align: left;
+  font-size: 18px;
 }
 
-canvas {
-  position: absolute;
-  z-index: 1;
+.instructions-container h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+/* Estilo para las imágenes del personaje */
+.image-container img {
   width: 100%;
-  height: 100%;
+  max-width: 300px;
+  border-radius: 8px;
+  align-content: space-between;
 }
