--- a/style.css
+++ b/style.css
@@ -69,14 +69,13 @@ h1 {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1170px;
   max-height: fit-content;
-  margin: 20px auto;
+  margin: 0px auto;
   background-color: rgb(239, 182, 200);
-  border: 1px solid #ccc;
+  border: 1px;
   border-radius: 8px;
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 /* Contenedor para el lienzo */
@@ -102,10 +101,10 @@ h1 {
 /* Estilo para las imágenes del personaje */
 .image-container {
   display: flex;
-  flex-direction: column; /* Asegura que la imagen y el botón estén uno debajo del otro */
-  align-items: center; /* Centra los elementos horizontalmente */
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  margin: 0 auto; /* Para centrarlo si es necesario */
+  margin: 30px auto;
 }
 
 .image-container img {
@@ -113,7 +112,7 @@ h1 {
   max-width: 250px;
   border-radius: 8px;
   align-content: space-between;
-  margin-bottom: 10px; /* Añade espacio debajo de la imagen */
+  margin-bottom: 10px;
 }
 
 /* Estilo para el botón */
@@ -133,4 +132,10 @@ h1 {
 
 #next-button:hover {
   background-color: rgb(105, 36, 124);
+}
+
+h2 {
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  margin-bottom: 30px;
 }
